cmake_minimum_required(VERSION 3.21)
project(DailyAlgorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(DailyAlgorithm main.cpp LeetCode/LC1001.h Tree.h LeetCode/LC337.h header.h LeetCode/LC437.h LeetCode/LC200.h LeetCode/LC221.h LeetCode/LC238.h LeetCode/LC240.h AcWing/ACW1715.h AcWing/ACW1696.h LeetCode/LC72.h LeetCode/LC76.h LeetCode/LC239.h LeetCode/LC124.h LeetCode/LC538.h LeetCode/LC312.h LeetCode/LC688.h AcWing/ACW1460.h AcWing/ACW1443.h AcWing/ACW1672.h AcWing/ACW1660.h AcWing/ACW3347.h WriteTest/test0313.h)
